@startuml

class VisiCalc {
    +static main(args: String[]): void
}

class VisiCalcUI {
    -viewport: Viewport
    -scanner: Scanner
    +iniciar(): void
    -mostrarHoja(): void
    -mostrarOpciones(): void
    -procesarComando(comando: char): boolean
    -editarCeldaActual(): void
}

class Viewport {
    -hoja: HojaDeCalculo
    -filaInicio: int
    -columnaInicio: int
    -FILAS_VIEWPORT: int
    -COLUMNAS_VIEWPORT: int
    -filaCursor: int
    -columnaCursor: int

    +getCelda(fila: int, columna: int): Celda
    +desplazarVerticalmente(cantidad: int): void
    +desplazarHorizontalmente(cantidad: int): void
    +moverCursor(desplazamientoFila: int,desplazamientoColumna: int)
    +getCeldaCursor(): Celda
    +getFilaInicio(): int
    +getColumnaInicio(): int
    +getFilasViewport(): int
    +getColumnasViewport(): int
    +getFilaCursorGlobal(): int
    +getColumnaCursorGlobal(): int
}

class HojaDeCalculo {
    -celdas: Celda[][]
    -FILAS: int
    -COLUMNAS: int
    
    +getCelda(fila: int, columna: int): Celda
    +getNumeroDeFilas(): int
    +getNumeroDeColumnas(): int
}

class Celda {
    -contenido: String
    +getContenido(): String
    +setContenido(contenido: String): void
    
}

VisiCalc --> VisiCalcUI: Instancia
VisiCalcUI --> Viewport: Usa
VisiCalcUI --> HojaDeCalculo: Usa
Viewport --> HojaDeCalculo: Usa
Viewport --> Celda: Usa
HojaDeCalculo --> Celda: Tiene

@enduml
@startuml

class VisiCalc {
    +static main(args: String[]): void
}

class VisiCalcUI {
    -hoja: HojaDeCalculo
    -viewport: Viewport
    -scanner: Scanner
    +iniciar(): void
    -mostrarHoja(): void
    -mostrarOpciones(): void
    -procesarComando(comando: char): boolean
    -editarCeldaActual(): void
}

class Viewport {
    -hoja: HojaDeCalculo
    -filasViewport: int
    -columnasViewport: int
    -filaInicio: int
    -columnaInicio: int
    -filaCursor: int
    -columnaCursor: int
    +moverCursor(dxFila: int, dxColumna: int): void
    +getCeldaCursor(): Celda
    +getFilasViewport(): int
    +getColumnasViewport(): int
    +getFilaInicio(): int
    +getCelda(fila: int, columna: int): Celda
}

class HojaDeCalculo {
    -filas: int
    -columnas: int
    -celdas: Celda[][]
    +getCelda(fila: int, columna: int): Celda
    +getNumeroDeFilas(): int
    +getNumeroDeColumnas(): int
}

class Celda {
    -contenido: String
    +setContenido(contenido: String): void
    +getContenido(): String
}

VisiCalc --> VisiCalcUI: Instancia
VisiCalcUI --> Viewport: Usa
VisiCalcUI --> HojaDeCalculo: Usa
Viewport --> HojaDeCalculo: Usa
Viewport --> Celda: Usa
HojaDeCalculo --> Celda: Tiene

@enduml